signup material ui

--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.11",
     "axios": "^1.6.7",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
