--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.12",
+    "@mui/icons-material": "^5.15.11",
     "@mui/material": "^5.15.11",
     "axios": "^1.6.7",
     "multer": "^1.4.5-lts.1",
