--- a/package.json
+++ b/package.json
@@ -19,10 +19,9 @@
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "react": "^18.2.0",
-    "react-beautiful-dnd": "^13.1.1",
+    "react-dnd": "^16.0.1",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.1",
-    "reactstrap": "^9.2.2"
+    "react-router-dom": "^6.22.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
