--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-spring": "^9.7.3",
     "react-textarea-autosize": "^8.5.3",
     "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
